samples/_failures_safe/1761262794_864e10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56df6227.c: In function ‘main’:
./samples/SAFE/__tmp_56df6227.c:143:9: error: expected expression at end of input
  143 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_56df6227.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56df6227.c:143:9: error: expected declaration or statement at end of input
